--- a/flask_app/templates/converter.html
+++ b/flask_app/templates/converter.html
@@ -6,7 +6,18 @@
     <title>Title</title>
 </head>
 <body>
-<div class="container mt-5">
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6 text-center">
+                <div class="card shadow">
+                    <div class="card-body">
+                        <a href="{{ url_for('index') }}"><-- To the washing machine</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-6 text-center">
                 <div class="card shadow">
